
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="demo.android.ait.hu.shoppinglist.CreateShoppingItemActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etItemName"
        android:hint="@string/item_name_edit_text"
        android:inputType="textCapSentences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/item_type_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerItemType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etItemPrice"
        android:hint="@string/price_edit_text"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etItemDesc"
        android:hint="@string/description_edit_text"
        android:inputType="textCapSentences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cbAlreadyPurchased"
        android:text="@string/checkbox_text"
        android:textColor="@color/text_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSave"
        android:text="@string/save_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
